Fix table overflow

--- a/misc/docerina/src/main/resources/html-template-resources/styles/css/styles.css
+++ b/misc/docerina/src/main/resources/html-template-resources/styles/css/styles.css
@@ -40,6 +40,9 @@ body .content-wrapper pre.ballerina-snippet {
   padding: 20px;
   overflow-x: auto;
 }
+body .content-wrapper table pre.ballerina-snippet {
+  width: 540px;
+}
 body .content-wrapper pre.ballerina-snippet code.language-ballerina {
   background: none;
 }
